--- a/RawlFarm.css
+++ b/RawlFarm.css
@@ -1229,6 +1229,88 @@ ul {
     }
 
 }
+
+@media screen and (max-width: 1280px) {
+    
+    .dashboard .container.active, .navbar .container.active {
+        width: calc(100% - 80px);
+        left: 80px;
+    }
+
+    .sidebar .container.active {
+        width:80px;
+        background-color: var(--second-bg-color);
+    }  
+    
+    .sidebar .container.active .title {
+        transition: 0.5s ease;
+        color: var(--second-bg-color);
+    }
+
+    .sidebar {
+        font-size: 0.8rem;
+        width: 40%;
+    }
+
+    .cardBox {
+        scale: 80%;
+        margin-top: -4%;
+        /* height: 80%; */
+        /* width: 80%; */
+        /* font-size: 70%; */
+    }
+    
+    .cardBox .card {
+        height: 7rem;
+        margin-top: -25px;
+        /* margin-bottom: 60%; */
+    }
+
+    .cardBox .card .numbers {
+        font-size: 2.1em;
+        margin-top: -10px;
+    }
+
+    .cardBox .card .cardName {
+        font-size: 0.9em;
+    }
+    
+    .mapBox {
+        grid-template-columns: 1.4fr 1.4fr 0.2fr;
+        scale: 70%;
+    }
+    .mapBox h2 {
+        font-size: 18px;
+        text-align: center;
+    }
+
+    .mapBox .map {
+        height: 85%;
+        width: 120%;
+    }
+
+    .mapBox .map .mapboxgl-canvas-container #canvas {
+        height: 993px;
+    }
+
+    .mapBox .ECmap #ECmap {
+        height: 65%;
+        
+        width: 120%;
+    }
+
+    .mapBox .linePlot {
+        scale: 60%;
+        margin-top: -86px;
+        font-size: 15px;
+    }
+
+    .mapBox .surfPlot {
+        scale: 60%;
+        margin-top: -185px;
+    }
+
+}
 /* @media screen and (max-width: 1150px) {
     .dashboard, .WS {
         grid-template-columns: 1fr 1fr;
